--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+	font-family: 'inter Ui'; 
+	src: url(./font/Inter-UI-Regular.otf); 
+}
+html{
+    background-color: #F7F7F7; 
+}
+body{
+    margin:0px;
+}
+.main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 90vh;  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wrapper{
+    width: 70vw;
+    background-color: #fff;
 }
+
+.wrapper-header{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.wrapper-card{
+ display: flex;
+ flex-direction: row;
+ justify-content: space-around;
+ flex-wrap: wrap;
+ width: 90%;
+ margin-left: 5%;
+ margin-right: 5%;
+}
+
+.input-search{
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 2vw;
+}
+
+.tabs{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+@media (max-width: 800px){
+    .main{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 90vh;  
+    }
+    
+    .wrapper{
+        width: 100vw;
+        background-color: #fff;
+    }
+    .card-movie{
+        max-width: 388px !important;
+    }
+    .card-movie__img{
+        width: 60px !important;
+        height: 90px !important;
+    }
+    .wrapper-card{
+        margin:0;
+    }
+    .input-search{
+        width: 70%;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+}
+ 
